# cqrs_users

./: README.md  docker-compose.yml
userscommand/: README.md  app.py  main.py  pyproject.toml
userscommand/src/adapters/: command_bus.py  command_create_user.py  handler_create_user.py
userscommand/src/adapters/models/: user_model.py
userscommand/src/adapters/repositories/: user_repo.py
userscommand/src/domain/entities/: user.py
userscommand/src/domain/use_cases/: create_user.py
userscommand/src/interfaces/: config_db.py
userscommand/src/interfaces/api/: exception_handlers.py  openapi.py  user_controller.py
userscommand/src/ports/: command_bus.py
userscommand/src/ports/repositories/: user_repository.py
userscommand/tests/adapters/: test_user_repo.py
userscommand/tests/domain/: test_create_user.py
usersquery/: README.md  main.py  pyproject.toml
usersquery/src/adapters/models/: user_model.py
usersquery/src/adapters/repositories/: user_repo.py
usersquery/src/domain/entities/: user.py
usersquery/src/domain/use_cases/: find_user_by_email.py  find_user_by_id.py
usersquery/src/interfaces/: config_db.py  redis_cache.py
usersquery/src/interfaces/api/: errors.py  openapi.py  user_controller.py
usersquery/src/ports/repositories/: cache_repository.py  user_repository.py
usersquery/tests/adapters/: test_user_repo.py
usersquery/tests/domain/: test_find_user_by_email.py  test_find_user_by_id.py
