[tool.poetry]
name = "userscommand"
version = "0.1.0"
description = "microservicio users command"
authors = ["Andres Molero <amolero.itconsulting@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.35"
pymysql = "^1.1.1"
cryptography = "^43.0.1"
email-validator = "^2.2.0"
pydantic = "^2.9.2"
coverage = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"